--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,6 @@
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
     'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
     'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
   --border--color--default: black;
 }
 
@@ -18,6 +17,8 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: black;
+  color: cadetblue;
 }
 
 a {
