--- a/styles/InitialCheck.module.css
+++ b/styles/InitialCheck.module.css
@@ -1,49 +1,28 @@
 .main {
-    display: grid;
-    grid-template-areas: ". lo lo ." 
-                         ". ca ca ."
-                         ". pl pl ."
-                         ". pr pr ."
-                         ". co st .";
-    justify-self: center;
-    align-self: center;
-    margin-top:auto;
-    padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  width: 100%;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
 }
 
-.main > *   {
-    align-self: center;
-    justify-self: center;
-}
-
+/*
 .logo {
-    grid-area: lo;
 }
 
-.captcha {
-    grid-area: ca;
-
+ .captcha {
 }
 
 .waitmessage {
-    grid-area: pl
 }
 
 .connectionquery {
-    grid-area: pr;
 }
 
 .contactus {
-    grid-area: co;
-    padding: 0.5rem;
-    justify-self: right;
 }
 
-.status {
-    grid-area: st;
-    padding: 0.5rem;
-    justify-self: left;
-}
-
-
-
+.status > * {
+} */
