--- a/.ladle/globals.css
+++ b/.ladle/globals.css
@@ -1,27 +1,27 @@
-@import url('node_modules/modern-normalize/modern-normalize.css');
-
-/* TODO: Change to appropriate colors. add more properties (pallet). */
+@import url('../node_modules/modern-normalize/modern-normalize.css');
 
 html { font-family: Inter, system-ui; 
   box-sizing: border-box;
+  color: #555;
 }
 
 @supports (font-variation-settings: normal) {
   html { font-family: "Inter var", system-ui; }
 }
 
+/* TODO: Change to appropriate colors. add more properties (pallet). */
+
 :root {
-  --fg: #000;
+  --fg: #333;
   --bg: #fff;
-  --theme: #e81c4f
+    --theme: #e81c4f
 }
-
-
 
 [data-theme="dark"] {
   --fg: #fff;
-  --bg: #000;
+  --bg: #333;
 }
+
   
 *,
 *::before,
@@ -29,12 +29,9 @@ html { font-family: Inter, system-ui;
   box-sizing: inherit;
 }
 
-
-main {
-  display: block;
-  width: 100vw;
-}
-
 a {
   color: var(--theme);
 }
+
+
+
