--- a/styles/Loading.module.css
+++ b/styles/Loading.module.css
@@ -1,4 +1,5 @@
 .sk-chase {
+  margin: auto;
   width: 40px;
   height: 40px;
   position: relative;
@@ -20,7 +21,7 @@
   width: 25%;
   height: 25%;
   border-radius: 100%;
-  background-color: aqua;
+  background-color: var(--theme);
   animation: sk-chase-dot-before 2.0s infinite ease-in-out both; 
 }
 
