--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,40 +1,2 @@
 @import url('node_modules/modern-normalize/modern-normalize.css');
-
-/* TODO: Change to appropriate colors. add more properties (pallet). */
-
-html { font-family: Inter, system-ui; 
-  box-sizing: border-box;
-}
-
-@supports (font-variation-settings: normal) {
-  html { font-family: "Inter var", system-ui; }
-}
-
-:root {
-  --fg: #000;
-  --bg: #fff;
-  --theme: #e81c4f
-}
-
-
-
-[data-theme="dark"] {
-  --fg: #fff;
-  --bg: #000;
-}
-  
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
-
-main {
-  display: block;
-  width: 100vw;
-}
-
-a {
-  color: var(--theme);
-}
+@import url('./_common.css');
