--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,2 +1,2 @@
-@import url('node_modules/modern-normalize/modern-normalize.css');
-@import url('./_common.scss');
+@import url("node_modules/modern-normalize/modern-normalize.css");
+@import url("./_common.css");
