--- a/styles/_common.css
+++ b/styles/_common.css
@@ -1,4 +1,6 @@
-/* TODO: Change to appropriate colors. add more properties (pallet). */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 html {
   font-family: Inter, system-ui;
