--- a/styles/compass.scss
+++ b/styles/compass.scss
@@ -11,32 +11,40 @@
 // ######################################################################
 
 // Default variables
-$default-text-shadow-h-offset: 0px!default;
-$default-text-shadow-v-offset: 0px!default;
-$default-text-shadow-blur    : 1px!default;
-$default-text-shadow-spread  : false!default;
-$default-text-shadow-color   : #aaaaaa!default;
+$default-text-shadow-h-offset: 0 !default;
+$default-text-shadow-v-offset: 0 !default;
+$default-text-shadow-blur: 1px !default;
+$default-text-shadow-spread: false !default;
+$default-text-shadow-color: #aaa !default;
 
 @mixin text-shadow($shadow...) {
-    $shadow: if(length($shadow) > 0, $shadow, default);
-    $default: -compass-space-list(compact($default-text-shadow-h-offset $default-text-shadow-v-offset $default-text-shadow-blur $default-text-shadow-spread $default-text-shadow-color));
-    $shadows-without-spread: join((), (), comma);
-    $shadows: join((), (), comma);
-    $has-spread: false;
-    @each $layer in $shadow {
-        $layer: if($layer == "default", $default, $layer);
-        @if length($layer) > 4 {
-            $has-spread: true;
-            $shadows-without-spread: append($shadows-without-spread, nth($layer, 1) nth($layer, 2) nth($layer, 3) nth($layer, 5));
-            $shadows: append($shadows, $layer);
-        }
-        @else {
-            $shadows-without-spread: append($shadows-without-spread, $layer);
-            $shadows: append($shadows, $layer);
-        }
+  $shadow: if(length($shadow) > 0, $shadow, default);
+  $default: -compass-space-list(
+    compact(
+      $default-text-shadow-h-offset $default-text-shadow-v-offset
+        $default-text-shadow-blur $default-text-shadow-spread
+        $default-text-shadow-color
+    )
+  );
+  $shadows-without-spread: join((), (), comma);
+  $shadows: join((), (), comma);
+  $has-spread: false;
+  @each $layer in $shadow {
+    $layer: if($layer == "default", $default, $layer);
+    @if length($layer) > 4 {
+      $has-spread: true;
+      $shadows-without-spread: append(
+        $shadows-without-spread,
+        nth($layer, 1) nth($layer, 2) nth($layer, 3) nth($layer, 5)
+      );
+      $shadows: append($shadows, $layer);
+    } @else {
+      $shadows-without-spread: append($shadows-without-spread, $layer);
+      $shadows: append($shadows, $layer);
     }
-    @if $has-spread {
-        text-shadow: $shadows-without-spread;
-    }
-    text-shadow: $shadows;
+  }
+  @if $has-spread {
+    text-shadow: $shadows-without-spread;
+  }
+  text-shadow: $shadows;
 }
