--- a/styles/_common.css
+++ b/styles/_common.css
@@ -1,3 +1,4 @@
+@import url("react-dropzone/examples/theme.css");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -20,7 +21,7 @@ html {
   --theme: #e81c4f;
 }
 
-::selection:not(.title) {
+:not(#title)::selection {
   background: var(--theme);
   color: white;
 }
