--- a/styles/_common.scss
+++ b/styles/_common.scss
@@ -1,43 +1,45 @@
 /* TODO: Change to appropriate colors. add more properties (pallet). */
 
-html { font-family: Inter, system-ui; 
-    box-sizing: border-box;
-    color: #555;
+html {
+  font-family: Inter, system-ui;
+  box-sizing: border-box;
 }
 
 @supports (font-variation-settings: normal) {
-    html { font-family: "Inter var", system-ui; }
+  html {
+    font-family: "Inter var", system-ui;
+  }
 }
 
 :root {
-    --fg: #000;
-    --bg: #fff;
-    --theme: #e81c4f
+  --fg: #000;
+  --bg: #fff;
+  --theme: #e81c4f;
+  --theme-light: #ff879d;
 }
 
 ::selection {
-    background: var(--theme);
-    color: white;
-} 
-
+  background: var(--theme);
+  color: white;
+}
 
 [data-theme="dark"] {
-    --fg: #fff;
-    --bg: #000;
+  --fg: #fff;
+  --bg: #000;
 }
-  
+
 *,
 *::before,
 *::after {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 
-
 main {
-    display: block;
-    width: 100vw;
+  display: block;
+  width: 100vw;
+  color: var(--fg);
 }
 
 a {
-    color: var(--theme);
+  color: var(--theme);
 }
