--- a/styles/MainPage.module.css
+++ b/styles/MainPage.module.css
@@ -7,6 +7,7 @@
 
 .heading {
   display: flex;
+  gap: 2vh;
   justify-content: center;
   align-items: center;
   padding: 2em;
@@ -20,4 +21,24 @@
 .logo {
   align-self: center;
   height: 14vh;
+}
+.theme {
+  width: 3vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 3vh;
+  border-radius: 50%; /* the magic */
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  background-color: #ff879d;
+}
+
+.theme:hover {
+  background-color: var(--theme);
+}
+
+.theme-icon {
+  height: 2vh;
+  flex: 1;
 }
