--- a/styles/Stats.module.css
+++ b/styles/Stats.module.css
@@ -1,4 +1,5 @@
 .stats {
-    display: flex;
-    justify-content: space-evenly;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
