--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -2,7 +2,9 @@
   flex-direction: row;
 }
 
-@media (max-width: 586px) {
+/* TODO: change to var(--md) */
+
+@media (max-width: 768px) {
   [role="tablist"] {
     flex-direction: column;
   }
