--- a/styles/TitleThemed.module.scss
+++ b/styles/TitleThemed.module.scss
@@ -47,8 +47,15 @@ $palette-length: length($palette);
   @return unquote($output);
 }
 
+.titleWrapper {
+  width: max(1vh + 10%, min(6rem, 1vh + 5%));
+  flex: 0.7;
+  text-align: center;
+}
+
 .title {
-  font-size: 8vh;
+  font-size: max(10%, 8vh + 50%);
+  width: 100%;
   font-family: Intro, sans-serif;
   color: transparent;
   background-clip: text;
