--- a/styles/MainPage.module.css
+++ b/styles/MainPage.module.css
@@ -17,15 +17,17 @@
   height: 14vh;
 }
 .theme {
-  width: 3vh;
   display: flex;
+  flex: 0.1;
+  width: 1rem;
+  height: 1rem;
   justify-content: center;
   align-items: center;
-  height: 3vh;
   border-radius: 50%; /* the magic */
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   background-color: #ff879d;
+  transition: 0.3s background;
 }
 
 .theme:hover {
@@ -33,6 +35,7 @@
 }
 
 .theme-icon {
-  height: 2vh;
-  flex: 1;
+  width: 0.5rem;
+  height: 0.5rem;
+}
 }
