--- a/styles/_common.css
+++ b/styles/_common.css
@@ -19,12 +19,11 @@ html {
   --fg: #000;
   --bg: #fff;
   --theme: #e81c4f;
-
   --sm: 640px;
   --md: 768px;
   --lg: 1024px;
   --xl: 1280px;
-  --2xl: 1536px;
+  --xl2: 1536px;
 }
 
 :not(#title)::selection {
