--- a/styles/Stats.module.css
+++ b/styles/Stats.module.css
@@ -5,3 +5,9 @@
 max-width: calc(var(--xl));
 margin: 0 auto;
 }
+
+@media screen and (min-width: 768px) {
+  .stats {
+    flex-direction: row;
+  }
+}
