--- a/styles/_common.css
+++ b/styles/_common.css
@@ -1,3 +1,4 @@
+@import url("../node_modules/modern-normalize/modern-normalize.css");
 @import url("./responsiveTable.css");
 @import url("react-dropzone/examples/theme.css");
 @import url("./hamburgers.css");
