--- a/styles/_common.css
+++ b/styles/_common.css
@@ -2,6 +2,7 @@
 @import url("./responsiveTable.css");
 @import url("react-dropzone/examples/theme.css");
 @import url("./hamburgers.css");
+@import url("./react-select-search.css");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
