--- a/styles/MainPage.module.css
+++ b/styles/MainPage.module.css
@@ -1,5 +1,10 @@
+.heading {
+  grid-template-columns: 1fr 2fr 1fr;
+}
 .theme {
   display: flex;
+  max-width: 30px;
+  margin: 0 auto;
   justify-content: center;
   align-items: center;
   border-radius: 50%; /* the magic */
@@ -9,6 +14,14 @@
   transition: 0.3s background;
 }
 
+@media screen and (max-width: 768px) {
+  .theme {
+    margin: 0 0 0 auto;
+  }
+.heading {
+  grid-template-columns: 1fr 2fr 1fr 1fr;
+}
+}
 .theme:hover {
   background-color: var(--theme);
 }
