--- a/styles/_common.css
+++ b/styles/_common.css
@@ -8,16 +8,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 :root {
   --fg: #000;
   --bg: #fff;
   --theme: #c2003c;
+  --theme-bg: #f5dec9;
   --sm: 640px;
   --md: 768px;
   --lg: 1024px;
   --xl: 1280px;
   --xl2: 1536px;
 }
+
 html {
   font-family: Inter, system-ui;
   box-sizing: border-box;
@@ -61,26 +64,58 @@ a {
   z-index: 2;
 }
 
-[role="tablist"] [tabindex="0"] {
+[role="tablist"] [aria-selected="true"] {
   color: var(--theme);
+  background-color: var(--theme-bg);
 }
 
 [role="tablist"] button {
-  transition-duration: 0.5s;
-  transition-property: all;
-  border: 1px solid #555;
+  align-self: center;
+  background: #f9fafa;
+  padding: 20px;
+  font-size: 0.9em;
+  font-weight: 700;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  transition: all 300ms ease-in-out;
+  left: 0;
+  top: 0;
+  width: 200px;
+  height: 80px;
+  border: 1px solid var(--theme);
+  color: var(--theme);
+  box-shadow: 4px 4px 0 0 var(--theme);
+}
+
+@media (width <=940px) {
+  [role="tablist"] button {
+    margin: 10px !important;
+    width: 50%;
+    max-height: 60px;
+    box-shadow: none;
+  }
+}
+
+[role="tabpanel"] {
+  display: none;
+}
+
+[role="tablist"] button:hover:not([aria-selected="true"]) {
+  left: 4px;
+  top: 4px;
+  box-shadow: 0 0 0 0 white;
 }
 
 [role="tablist"] {
   padding: 0.5rem 0;
-  justify-content: space-around;
+  justify-content: space-evenly;
   max-width: var(--xl2);
   width: 100%;
   align-self: center;
   flex-direction: row;
 }
 
-@media (max-width: 940px) {
+@media (width <=940px) {
   [role="tablist"] {
     flex-direction: column;
   }
@@ -91,9 +126,10 @@ ul li,
 ol li {
   line-height: 140%;
 }
+
 table {
   border-collapse: initial;
-  background: rgba(255, 255, 255, 0.4);
+  background: rgb(255 255 255 / 40%);
 }
 
 th,
@@ -116,6 +152,6 @@ tr:first-of-type th:not(:last-child) {
 }
 
 tr:first-child th:first-child,
-tr:not(:first-child):not(:last-child) th {
+tr:not(:first-child, :last-child) th {
   border-bottom-color: transparent !important;
 }
