--- a/styles/MainPage.module.css
+++ b/styles/MainPage.module.css
@@ -6,8 +6,8 @@
 .theme {
   display: flex;
   max-width: 30px;
-  margin: 0 auto;
   justify-content: center;
+  margin-inline: auto;
   align-items: center;
   border-radius: 50%;
   /* the magic */
@@ -18,12 +18,8 @@
 }
 
 @media screen and (width <=938px) {
-  .theme {
-    margin: 0 0 0 auto;
-  }
-
   .heading {
-    grid-template-columns: .3fr 1fr .2fr .4fr;
+    grid-template-columns: .3fr 1fr .1fr .3fr;
     margin-block: 2vw;
   }
 }
