--- a/styles/_common.css
+++ b/styles/_common.css
@@ -14,6 +14,7 @@
   --theme-bg: #f5dec9;
   --sm: 640px;
   --md: 768px;
+  --mdx: 938px;
   --lg: 1024px;
   --xl: 1280px;
   --xl2: 1536px;
@@ -62,25 +63,21 @@ a {
 
 [role="tablist"] button {
   align-self: center;
-  padding: 20px;
   font-size: 0.9em;
-  font-weight: 700;
   letter-spacing: 2px;
   text-transform: uppercase;
   transition: all 300ms ease-in-out;
   left: 0;
   top: 0;
-  width: 200px;
-  height: 80px;
+  width: 180px;
   border: 1px solid var(--theme);
   color: var(--theme);
   box-shadow: 4px 4px 0 0 var(--theme);
 }
 
-@media (width <=940px) {
+@media (width <=938px) {
   [role="tablist"] button {
     margin: 10px !important;
-    width: 50%;
     max-height: 60px;
     box-shadow: none;
   }
@@ -106,7 +103,7 @@ a {
   border-bottom: 0;
 }
 
-@media (width <=940px) {
+@media (width <=938px) {
   [role="tablist"] {
     flex-direction: column;
   }
@@ -115,6 +112,3 @@ a {
 th {
   color: #fff;
 }
-
-
-
