make wizard content bounded

--- a/styles/_common.css
+++ b/styles/_common.css
@@ -21,6 +21,15 @@
     --xl: 1280px;
     --xl2: 1536px;
   }
+
+  @media screen and (width >= 938px) {
+    [aria-label="content"] {
+      max-width: 990px !important;
+      max-height: 529px !important;;
+      margin: auto !important;;
+    }
+    
+  }
 }
 
 html {
