--- a/styles/_common.css
+++ b/styles/_common.css
@@ -20,9 +20,13 @@
     --lg: 1024px;
     --xl: 1280px;
     --xl2: 1536px;
+    --width-input-select: 100%;
   }
 
   @media screen and (width >= 938px) {
+    :root {
+      --width-input-select: 30vw;
+    }
     [aria-label="content"] {
       max-width: 990px !important;
       max-height: 529px !important;;
