--- a/styles/_common.css
+++ b/styles/_common.css
@@ -20,7 +20,7 @@
     --lg: 1024px;
     --xl: 1280px;
     --xl2: 1536px;
-    --width-input-select: 100%;
+    --width-input-select: auto;
   }
 
   @media screen and (width >= 938px) {
