--- a/styles/VerifyHashlist.module.css
+++ b/styles/VerifyHashlist.module.css
@@ -10,11 +10,11 @@
     border-top-right-radius: 0px !important;
     border-bottom-width: 2px !important;
 }
-.bad:focus {
+.bad{
     --tw-text-opacity: 1;
     color: rgb(224 36 36 / var(--tw-text-opacity)) !important;
 }
-.good:focus {
+.good{
     --tw-text-opacity: 1;
     color: rgb(14 159 110 / var(--tw-text-opacity)) !important;
 }
