--- a/styles/ConfigureTask.module.css
+++ b/styles/ConfigureTask.module.css
@@ -19,8 +19,10 @@
     user-select: none;
 }
 
+
 .attackButton {
     padding: 10px 20px;
+    max-width: fit-content;
     border: none;
     margin: 20px;
     flex-direction: column;
@@ -39,5 +41,16 @@
 
 .attackButton:hover {
     background-color: var(--theme-bg);
+    transition: 0.2s cubic-bezier(0.4, 0, 0.6, 1);
+}
+
+.attackButtonDisabled {
+    background-color: #eee;
+    color: #777;
+}
+
+
+.attackButtonDisabled:hover {
+    background-color: #ccc;
     transition: 0.2s cubic-bezier(0.4, 0, 0.6, 1);
 }
