--- a/styles/ConfigureTask.module.css
+++ b/styles/ConfigureTask.module.css
@@ -1,7 +1,8 @@
 .icon {
     width: calc(1.58rem + 2.25 * var(--fluid-bp));
-    margin-bottom: 12px;
+    margin-right: 12px;
     align-items: center;
+    align-self: center;
     font-feature-settings: 'liga';
     justify-content: center;
     letter-spacing: normal;
@@ -21,18 +22,16 @@
 
 
 .attackButton {
+    border: 1px solid var(--theme-bg);
     padding: 10px 20px;
-    max-width: fit-content;
-    border: none;
     margin: 20px;
-    flex-direction: column;
     align-items: center;
     border-radius: 4px;
     display: flex;
     flex: 0 0 auto;
     font-weight: 500;
     letter-spacing: 0.0893em;
-    justify-content: center;
+    justify-content: stretch;
     text-indent: 0.0893em;
     text-transform: uppercase;
     vertical-align: middle;
@@ -52,11 +51,28 @@
 
 .attackButtonDisabled {
     background-color: #eee;
+    border: 1px solid #eee;
     color: #777;
+    justify-content: center;
 }
 
 
 .attackButtonDisabled:hover {
     background-color: #ccc;
+    border: 1px solid #ccc;
     transition: 0.2s cubic-bezier(0.4, 0, 0.6, 1);
+}
+
+.attackContainer {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    width: calc(37.88rem + 18.00 * var(--fluid-bp));
+}
+
+
+@media screen and (width <=640px) {
+    .attackContainer {
+        width: 100%;
+    }
 }
