--- a/styles/ConfigureTask.module.css
+++ b/styles/ConfigureTask.module.css
@@ -24,19 +24,19 @@
 .attackButton {
     border: 1px solid var(--theme-bg);
     padding: 10px 20px;
-    margin: 20px;
     align-items: center;
     border-radius: 4px;
     display: flex;
     flex: 0 0 auto;
     font-weight: 500;
     letter-spacing: 0.0893em;
-    justify-content: stretch;
+    justify-content: center;
     text-indent: 0.0893em;
     text-transform: uppercase;
     vertical-align: middle;
     white-space: nowrap;
-    transition: 0.2s cubic-bezier(0.4, 0, 0.6, 1);
+    transition: color 0.2s cubic-bezier(0.4, 0, 0.6, 1);
+}
 }
 
 .attackButtonSelected {
